# opencv_color_detection_cpp

./: CMakeLists.txt  README.md
src/: blue_cam.cpp  blue_img.cpp  red2.cpp  red_and_blue_webcam.cpp  red_cam.cpp  red_img.cpp
